--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "multipleSideMenuDemo",
-  "app_id": "",
+  "name": "multilevelsidemenu",
+  "app_id": "d90d8463",
   "v2": true,
   "typescript": true
 }
