moved outside of the component some code that creates a few options for the demo. Added some comments in the code

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "multilevelsidemenu",
   "app_id": "d90d8463",
-  "v2": true,
-  "typescript": true
+  "integrations": {},
+  "type": "ionic-angular"
 }
