updated Ionic to 3.6.0. Replaced the deprecated renderer. Made some other small edits

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
-  "name": "multilevelsidemenu",
+  "name": "Ionic3_MultilevelSidemenu",
   "app_id": "d90d8463",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "type": "ionic-angular"
 }
