--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
         "ionic:serve": "ionic-app-scripts serve"
     },
     "dependencies": {
-        "@angular/common": "4.1.3",
-        "@angular/compiler": "4.1.3",
-        "@angular/compiler-cli": "4.1.3",
-        "@angular/core": "4.1.3",
-        "@angular/forms": "4.1.3",
-        "@angular/http": "4.1.3",
-        "@angular/platform-browser": "4.1.3",
-        "@angular/platform-browser-dynamic": "4.1.3",
-        "@ionic-native/core": "3.12.1",
-        "@ionic-native/splash-screen": "3.12.1",
-        "@ionic-native/status-bar": "3.12.1",
-        "@ionic/storage": "2.0.1",
+        "@angular/common": "5.0.1",
+        "@angular/compiler": "5.0.1",
+        "@angular/compiler-cli": "5.0.1",
+        "@angular/core": "5.0.1",
+        "@angular/forms": "5.0.1",
+        "@angular/http": "5.0.1",
+        "@angular/platform-browser": "5.0.1",
+        "@angular/platform-browser-dynamic": "5.0.1",
+		"@angular/tsc-wrapped": "5.0.0-beta.7",
+        "@ionic-native/core": "4.4.2",
+        "@ionic-native/splash-screen": "4.4.2",
+        "@ionic-native/status-bar": "4.4.2",
+        "@ionic/storage": "2.1.3",
         "cordova-android": "~6.1.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "1.0.5",
@@ -29,16 +30,16 @@
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.1",
         "cordova-plugin-whitelist": "1.3.1",
-        "ionic-angular": "^3.6.0",
+        "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
-        "rxjs": "5.4.0",
+        "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.18"
     },
     "devDependencies": {
-        "@ionic/app-scripts": "^2.1.4",
-        "typescript": "2.3.4"
+        "@ionic/app-scripts": "3.1.5",
+        "typescript": "2.4.2"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
